...
            "state" : "translated",
            "value" : "Ausgangsmessung (ältere Aufnahme)"
          }
        }
      }
    },
    "No stimulation planned today" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Heute keine Stimulation geplant"
...
            "state" : "translated",
            "value" : "Nach der Sitzung"
          }
        }
      }
    },
    "After stimulation" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nach der Stimulation"
...
            "state" : "translated",
            "value" : "Vor der Sitzung"
          }
        }
      }
    },
    "Before stimulation" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vor der Stimulation"
...
    "Movement" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bewegung"
          }
        }
      }
    },
    "Movement Data Export" : {
      "extractionState" : "manual",
...
    "No recordings saved" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keine Aufnahmen gespeichert"
          }
        }
      }
    },
    "No recordings yet" : {
      "extractionState" : "manual",
...
    "Start" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Starten"
          }
        }
      }
    },
    "Start check" : {
      "extractionState" : "manual",
...
    "Start Recording" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aufnahme starten"
          }
        }
      }
    },
    "Start vCR" : {
      "extractionState" : "manual",
...
